--- a/A01_RandomPoem/index.html
+++ b/A01_RandomPoem/index.html
@@ -7,7 +7,7 @@
     <script src="./app.js" defer></script>
 </head>
 <body>
-    <h1>Willkommen zu deinem TypeScript Test!</h1>
+    <h1>Aufagbe zur Übung</h1>
     <p>Öffne die Browserkonsole, um die Ausgabe zu sehen (F12 oder Rechtsklick → Untersuchen → Konsole).</p>
 </body>
 </html>
