--- a/Übung/index.html
+++ b/Übung/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vogelhäuschen</title>
+    <title>Vogelhäuschen Animation</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" type="module"></script>
 </head>
 <body>
-    <h1>Vogelwelt</h1>
+    <h1>Vogelwelt Animation</h1>
     <canvas id="canvas"></canvas>
-   
+    <script src="script.js" type="module"></script>
 </body>
 </html>
